Mersal Img Added

--- a/src/app/mersal/mersal.component.html
+++ b/src/app/mersal/mersal.component.html
@@ -1,1 +1,6 @@
+<div class="row">
+  <div class="container">
+  <img class="img-responsive mersalImg" src="../../assets/images/mersal_main.JPG" alt="Mersal Main Picture">
+  </div> 
+</div>
 <app-plot [movieRating]="movieRating" (onRatingChange)="ratingChange($event)"></app-plot>
