--- a/src/app/plot/plot.component.html
+++ b/src/app/plot/plot.component.html
@@ -4,9 +4,11 @@
       <h3 *ngIf="movieRating">Overall Movie Rating: {{movieRating}}</h3>
       <h1>Plot</h1>
     </div>
+    <hr class="col-md-12">
     <app-user-rating 
       (onRatingChange)="this.onRatingChange.emit($event)" 
-      [(plotModel)]="model">
+      [(plotModel)]="model"
+      [ratingText]="'My Rating: '">
     </app-user-rating>
     <p class="plot col-md-12">An ambulance driver, a medical-broker, a hospital HR (Pasanga Sivakumar) and a surgeon, were mysteriously abducted at
       dawn. Alerted by the incidents, Ratnavel (Sathyaraj), a police officer with Tamil Nadu Police nabs the suspect. As
@@ -48,6 +50,7 @@
     <app-user-rating 
       class="col-md-offset-6 col-md-6" 
       (onRatingChange)="this.onRatingChange.emit($event)"  
-      [(plotModel)]="model">
+      [(plotModel)]="model"
+      [ratingText]="'Plot Rating: '">
     </app-user-rating>
 </div>
