--- a/src/app/box-office/box-office.component.html
+++ b/src/app/box-office/box-office.component.html
@@ -7,8 +7,23 @@
 	<!-- Box Office information -->
 	<!-- 6 box office should be coming here -->
 	<div class="row bOCircles">
-		<div class="col-lg-4">
-			<app-box-circle></app-box-circle>			
+		<div class="col-lg-4 col-md-4 col-xs-12">
+			<app-box-circle [image] = "'../../assets/images/theatre.jpg'" [heading]="'Theatre'" [overlay]="'3,330+'"></app-box-circle>
+		</div>
+		<div class="col-lg-4 col-md-4 col-xs-12">
+			<app-box-circle [image] = "'../../assets/images/club.jpg'" [heading]="'Clubs In'" [overlay]="'$Billion'"></app-box-circle>			
+		</div>
+		<div class="col-lg-4 col-md-4 col-xs-12">
+			<app-box-circle [image] = "'../../assets/images/imdb.jpg'" [heading]="'IMDb '" [overlay]="'8.9/10'"></app-box-circle>			
+		</div>
+		<div class="col-lg-4 col-md-4 col-xs-12">
+			<app-box-circle [image] = "'../../assets/images/hero.jpg'" [heading]="'Hero'" [overlay]="'Vijay'"></app-box-circle>
+		</div>
+		<div class="col-lg-4 col-md-4 col-xs-12">
+			<app-box-circle [image] = "'../../assets/images/director.jpg'" [heading]="'Director'" [overlay]="'Atlee'"></app-box-circle>			
+		</div>
+		<div class="col-lg-4 col-md-4 col-xs-12">
+			<app-box-circle [image] = "'../../assets/images/budget.jpg'" [heading]="'Budget'" [overlay]="'130 Cr.'"></app-box-circle>			
 		</div>
 	</div>
 
